--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: push_notificatio_pd
-description: Permite lançar notificações
-version: 0.0.1
+description: Permite lançar notificações para utilizadores resgistados em base de dados
+version: 0.0.2
 homepage: https://github.com/PedroDuarteD/PushNotificationPD
 
 environment:
